# zsh-how

./: CLAUDE.md  LICENSE  README.md  zsh-how.plugin.zsh
test-fixtures/docker-compose/: docker-compose.yml
test-fixtures/fullstack/: Dockerfile  Makefile  docker-compose.yml  justfile  package.json
test-fixtures/go/: go.mod
test-fixtures/just/: justfile
test-fixtures/make/: Makefile
test-fixtures/node/: package.json
test-fixtures/node-docker/: compose.yml  package.json
test-fixtures/python-make/: Makefile  pyproject.toml
test-fixtures/python-pip/: requirements.txt
test-fixtures/python-poe/: pyproject.toml
test-fixtures/python-poetry/: pyproject.toml
test-fixtures/python-uv/: pyproject.toml
test-fixtures/rust/: Cargo.toml
